--- a/web/wp-content/themes/starter/style.css
+++ b/web/wp-content/themes/starter/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Starter
 Theme URI: https://github.com/sboerrigter/wordpress-starter
-Description: Starter theme for custom theme development.
+Description: Custom WordPress theme, built with <a href="https://github.com/sboerrigter/wordpress-starter">WordPress starter</a>.
 Author: Sjoerd Boerrigter
 Author URI: https://www.bonsjoerd.fr
 Version: 1.0
