--- a/web/wp-content/themes/starter/style.css
+++ b/web/wp-content/themes/starter/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Starter
+Theme Name: WordPress starter
 Theme URI: https://github.com/sboerrigter/wordpress-starter
 Description: Custom WordPress theme, built with <a href="https://github.com/sboerrigter/wordpress-starter">WordPress starter</a>.
 Author: Sjoerd Boerrigter
