🚚 themes/starter > themes/custom

--- a/web/wp-content/themes/custom/style.css
+++ b/web/wp-content/themes/custom/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: WordPress starter
+Theme Name: Custom theme
 Theme URI: https://github.com/sboerrigter/wordpress-starter
 Description: Custom WordPress theme, built with <a href="https://github.com/sboerrigter/wordpress-starter">WordPress starter</a>.
 Author: Sjoerd Boerrigter
