--- a/web/wp-content/themes/custom/styles/components/wrapper.css
+++ b/web/wp-content/themes/custom/styles/components/wrapper.css
@@ -1,7 +1,7 @@
 @layer components {
   .wrapper {
     @apply mx-auto;
-    @apply px-5 md:px-10;
+    @apply px-5;
     @apply w-full max-w-screen-xl;
   }
 }
