--- a/web/wp-content/themes/custom/styles/app.css
+++ b/web/wp-content/themes/custom/styles/app.css
@@ -1,5 +1,6 @@
 @import 'tailwindcss';
 
+@import './base/typography.css';
 @import './components/menu.css';
 @import './components/wrapper.css';
 @import './utilities/center.css';
