--- a/web/wp-content/themes/custom/styles/app.css
+++ b/web/wp-content/themes/custom/styles/app.css
@@ -3,11 +3,23 @@
 @theme {
   --breakpoint-2xs: 375px;
   --breakpoint-xs: 480px;
+
+  --color-brand-50: var(--color-blue-50);
+  --color-brand-100: var(--color-blue-100);
+  --color-brand-200: var(--color-blue-200);
+  --color-brand-300: var(--color-blue-300);
+  --color-brand-400: var(--color-blue-400);
+  --color-brand-500: var(--color-blue-500);
+  --color-brand-600: var(--color-blue-600);
+  --color-brand-700: var(--color-blue-700);
+  --color-brand-800: var(--color-blue-800);
+  --color-brand-900: var(--color-blue-900);
+  --color-brand-950: var(--color-blue-950);
 }
 
 @layer base {
   * {
-    @apply accent-blue-600;
+    @apply accent-brand-600;
     @apply border-gray-200;
   }
 
@@ -48,7 +60,7 @@
   ol,
   ul {
     @apply list-inside list-disc text-gray-600 mb-6;
-    @apply marker:text-blue-600 marker:font-semibold;
+    @apply marker:text-brand-600 marker:font-semibold;
 
     ol,
     ul {
@@ -65,7 +77,7 @@
   }
 
   a {
-    @apply text-blue-600 hover:text-blue-800;
+    @apply text-brand-600 hover:text-brand-800;
     @apply underline underline-offset-2 font-semibold;
     @apply transition-colors;
   }
@@ -79,7 +91,7 @@
   }
 
   ::selection {
-    @apply bg-blue-600 text-white;
+    @apply bg-brand-600 text-white;
   }
 }
 
