--- a/web/wp-content/themes/custom/style.css
+++ b/web/wp-content/themes/custom/style.css
@@ -1,8 +1,9 @@
 /*
-Theme Name: Custom theme
-Theme URI: https://github.com/sboerrigter/wordpress-starter
-Description: Custom WordPress theme, built with <a href="https://github.com/sboerrigter/wordpress-starter">WordPress starter</a>.
-Author: Sjoerd Boerrigter
-Author URI: https://www.bonsjoerd.fr
-Version: 1.0
+ * Theme Name: Custom theme
+ * Theme URI: https://github.com/sboerrigter/wordpress-starter
+ * Description: Custom WordPress theme, built with <a href="https://github.com/sboerrigter/wordpress-starter">WordPress starter</a>.
+ * Author: Sjoerd Boerrigter
+ * Author URI: https://www.bonsjoerd.eu
+ * Version: 1.0
+ * Text domain: theme
 */
