--- a/web/wp-content/themes/custom/styles/app.css
+++ b/web/wp-content/themes/custom/styles/app.css
@@ -93,6 +93,10 @@
   ::selection {
     @apply bg-primary-600 text-white;
   }
+
+  iframe {
+    @apply w-full aspect-video;
+  }
 }
 
 @layer components {
