--- a/web/wp-content/themes/theme/style.css
+++ b/web/wp-content/themes/theme/style.css
@@ -1,5 +1,5 @@
 /*
- * Theme Name: Custom theme
+ * Theme Name: Theme
  * Theme URI: https://github.com/sboerrigter/wordpress-starter
  * Description: Custom WordPress theme, built with <a href="https://github.com/sboerrigter/wordpress-starter">WordPress starter</a>.
  * Author: Sjoerd Boerrigter
