💄 Trying to get body styles to work in the editor

--- a/web/wp-content/themes/theme/styles/theme.css
+++ b/web/wp-content/themes/theme/styles/theme.css
@@ -20,9 +20,10 @@
 }
 
 @layer base {
-  * {
-    @apply accent-primary-600;
-    @apply border-gray-200;
+  body {
+    @apply bg-white text-gray-800;
+    @apply font-sans antialiased leading-normal;
+    @apply accent-primary-600 border-gray-200;
   }
 
   h1,
