🚧 Don't use CSS @layer to prevent specificy issues with editor styles
See:

https://github.com/tailwindlabs/tailwindcss/discussions/16934
https://github.com/WordPress/gutenberg/issues/69833

--- a/web/wp-content/themes/theme/styles/theme.css
+++ b/web/wp-content/themes/theme/styles/theme.css
@@ -1,4 +1,11 @@
-@import 'tailwindcss';
+@import 'tailwindcss/theme.css';
+@import 'tailwindcss/preflight.css';
+
+@import './base.css';
+@import './components.css';
+@import './utilities.css';
+
+@import 'tailwindcss/utilities.css';
 
 @theme {
   --breakpoint-2xs: 375px;
@@ -17,168 +24,4 @@
   --color-primary-800: var(--color-blue-800);
   --color-primary-900: var(--color-blue-900);
   --color-primary-950: var(--color-blue-950);
-}
-
-@layer base {
-  body {
-    @apply bg-white text-gray-800;
-    @apply font-sans antialiased leading-normal;
-    @apply accent-primary-600 border-gray-200;
-  }
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    @apply font-extrabold leading-normal;
-    @apply text-lg/normal mb-2;
-
-    strong {
-      @apply font-extrabold;
-    }
-  }
-
-  h1 {
-    @apply text-3xl/snug mb-4;
-    @apply xs:text-4xl/tight xs:mb-8;
-    @apply md:text-5xl/tight md:mb-10;
-  }
-
-  h2 {
-    @apply text-2xl/normal mb-3;
-    @apply md:text-3xl/snug md:mb-4;
-  }
-
-  h3 {
-    @apply text-xl mb-2;
-    @apply md:text-2xl/normal md:mb-3;
-  }
-
-  p {
-    @apply text-base/normal mb-6 text-gray-600;
-  }
-
-  ol,
-  ul {
-    @apply list-disc text-gray-600 ml-5 mb-6;
-    @apply marker:text-primary-600 marker:font-semibold;
-
-    ol,
-    ul {
-      @apply mb-0;
-    }
-  }
-
-  ol {
-    @apply list-decimal;
-  }
-
-  li {
-    @apply my-1;
-  }
-
-  a {
-    @apply text-primary-600 hover:text-primary-800;
-    @apply underline underline-offset-2 font-semibold;
-    @apply transition-colors;
-  }
-
-  strong {
-    @apply font-semibold text-gray-800;
-  }
-
-  ::selection {
-    @apply bg-primary-600 text-white;
-  }
-
-  iframe {
-    @apply w-full aspect-video;
-  }
-}
-
-@layer components {
-  .button {
-    @apply inline-flex gap-1 px-4 py-2 border-2 rounded;
-    @apply font-semibold no-underline;
-    @apply bg-primary-600 border-primary-600 text-white;
-    @apply hover:bg-primary-800 hover:border-primary-800 hover:text-white;
-  }
-
-  .button-blue-outline {
-    @apply bg-transparent border-primary-600 text-primary-600;
-    @apply hover:bg-primary-800 hover:border-primary-800;
-  }
-
-  .button-gray {
-    @apply bg-gray-600 border-gray-600 text-white;
-    @apply hover:bg-gray-800 hover:border-gray-800;
-  }
-
-  .button-gray-outline {
-    @apply bg-transparent border-gray-600 text-gray-600;
-    @apply hover:bg-gray-800 hover:border-gray-800;
-  }
-
-  .button-chevron-right {
-    @apply group-hover:translate-x-1 transition-transform;
-  }
-
-  .menu-open {
-    @apply !opacity-100 !translate-y-0 !flex !pointer-events-auto;
-  }
-
-  .menu-toggle-open {
-    @apply rotate-90;
-
-    .menu-toggle-line-1,
-    .menu-toggle-line-2,
-    .menu-toggle-line-3 {
-      @apply !bg-white;
-    }
-
-    .menu-toggle-line-1 {
-      @apply translate-y-1.5 rotate-45;
-    }
-
-    .menu-toggle-line-2 {
-      @apply opacity-0;
-    }
-
-    .menu-toggle-line-3 {
-      @apply -translate-y-1.5 -rotate-45;
-    }
-  }
-
-  .menu-item-open {
-    .menu-item-toggle {
-      @apply !rotate-0;
-    }
-
-    .menu-item-children {
-      @apply !flex;
-    }
-  }
-
-  .wp-block-separator {
-    @apply my-6 !border-t-0 h-px bg-gray-200;
-  }
-
-  .wrapper {
-    @apply mx-auto;
-    @apply px-5;
-    @apply w-full max-w-[1240px];
-  }
-}
-
-@layer utilities {
-  .center {
-    @apply flex items-center justify-center;
-  }
-}
-
-/* WordPress editor styles */
-.editor-styles-wrapper {
-  @apply w-full max-w-content px-5 mx-auto;
 }
