🚚 wordpress-starter > start

--- a/web/wp-content/themes/theme/style.css
+++ b/web/wp-content/themes/theme/style.css
@@ -1,7 +1,7 @@
 /*
  * Theme Name: Theme
- * Theme URI: https://github.com/sboerrigter/wordpress-starter
- * Description: Custom WordPress theme, built with <a href="https://github.com/sboerrigter/wordpress-starter">WordPress starter</a>.
+ * Theme URI: https://github.com/sboerrigter/start
+ * Description: Custom WordPress theme, built with <a href="https://github.com/sboerrigter/start">Start</a>.
  * Author: Sjoerd Boerrigter
  * Author URI: https://www.bonsjoerd.eu
  * Version: 1.0
