🎨 Format template files as HTML and automatically sort tailwind classes

--- a/web/wp-content/themes/theme/components/button.phtml
+++ b/web/wp-content/themes/theme/components/button.phtml
@@ -1,4 +1,4 @@
-<a class="button group <?= $class ?? '' ?>"
+<a class="button group <?= $class ?? ''; ?>"
     <?php
     if (!empty($url)) {
       echo 'href="' . $url . '" ';
@@ -10,12 +10,12 @@
     if (!empty($target) && $target === '_blank') {
       echo 'rel="nofollow" ';
     }
-    ?>
+   ; ?>
 >
-  <?= $iconBefore ?? null ?>
-  <?= $title ?>
+  <?= $iconBefore ?? null; ?>
+  <?= $title; ?>
   <?= $iconAfter ??
     component('svg/chevron-right', [
       'class' => 'button-chevron-right',
-    ]) ?>
+    ]); ?>
 </a>
