--- a/web/wp-content/themes/theme/components/svg/chevron-down.phtml
+++ b/web/wp-content/themes/theme/components/svg/chevron-down.phtml
@@ -1,5 +1,5 @@
 <svg
-  class="<?= $class ?? '' ?> flex-none"
+  class="<?= $class ?? ''; ?> flex-none"
   fill="none"
   stroke-width="2"
   stroke="currentColor"
@@ -7,5 +7,5 @@
   width="20"
   xmlns="http://www.w3.org/2000/svg"
 >
- <polyline points="8 6 12 10 8 14"></polyline>
+  <polyline points="14 8 10 12 6 8"></polyline>
 </svg>
