--- a/web/wp-content/themes/theme/components/content.phtml
+++ b/web/wp-content/themes/theme/components/content.phtml
@@ -1,8 +1,5 @@
 <section>
-  <div class="
-    content wrapper max-w-content mt-10 mb-15
-    md:mt-20 md:mb-25
-  ">
+  <div class="content wrapper max-w-content mt-10 mb-15 md:mt-20 md:mb-25">
     <h1><?php the_title(); ?></h1>
 
     <?php the_content(); ?>
