--- a/web/wp-content/themes/theme/components/menu-item.phtml
+++ b/web/wp-content/themes/theme/components/menu-item.phtml
@@ -1,9 +1,23 @@
+<!-- prettier-ignore-attribute class -->
 <div
-  class="menu-item group <?= !isset($isChild) ? 'max-lg:border-t font-semibold' : 'font-normal'; ?> relative border-white/25 max-lg:last:border-b"
+  class="
+    menu-item group relative
+    <?= !isset($isChild) ?
+      'max-lg:border-t max-lg:last:border-b border-white/25 font-semibold' :
+      'font-normal'
+    ?>
+  "
 >
   <div class="flex">
+    <!-- prettier-ignore-attribute class -->
     <a
-      class="<?= !isset($isChild) ? 'p-3 lg:hover:text-primary-600' : 'p-1 lg:w-full'; ?> flex items-center gap-1 text-white/75 no-underline hover:text-white/100 max-lg:w-full lg:px-4 lg:py-3 lg:text-gray-800"
+      class="
+        flex gap-1 items-center max-lg:w-full no-underline text-white/75 hover:text-white/100
+        <?= !isset($isChild) ?
+          'p-3 lg:px-4 lg:py-3 lg:text-gray-800 lg:hover:text-primary-600' :
+          'p-1 lg:px-4 lg:w-full'
+        ?>
+      "
       href="<?= $item->url; ?>"
       target="<?= $item->target; ?>"
     >
@@ -18,25 +32,29 @@
     </a>
 
     <?php if ($item->children) { ?>
+
     <div
       class="menu-item-toggle user-select-none flex h-12 w-12 -rotate-90 cursor-pointer items-center justify-center text-white/50 transition-all hover:text-white/100 lg:hidden"
     >
       <?= component('svg/chevron-down', ['class' => 'w-5 h-5']); ?>
     </div>
+
     <?php } ?>
   </div>
 
   <?php if ($item->children) { ?>
+
   <div
     class="menu-item-children lg:bg-primary-900 hidden flex-col max-lg:mb-5 max-lg:ml-5 lg:absolute lg:left-0 lg:w-60 lg:rounded lg:py-3 lg:group-last:right-0 lg:group-last:left-auto lg:group-hover:flex"
   >
     <!-- prettier-ignore -->
     <?php foreach ($item->children as $item) { ?>
-        <?= component('menu-item', [
-          'item' => $item,
-          'isChild' => true,
-        ]); ?>
-      <?php } ?>
+      <?= component('menu-item', [
+        'item' => $item,
+        'isChild' => true,
+      ]); ?>
+    <?php } ?>
   </div>
+
   <?php } ?>
 </div>
