--- a/web/wp-content/themes/theme/styles/utilities.css
+++ b/web/wp-content/themes/theme/styles/utilities.css
@@ -1,27 +1,29 @@
 @utility button {
-  @apply inline-flex gap-1 px-4 py-2 border-2 rounded;
-  @apply font-semibold no-underline cursor-pointer;
+  @apply inline-flex gap-1 rounded border-2 px-4 py-2;
+  @apply cursor-pointer font-semibold no-underline;
   @apply bg-primary-600 border-primary-600 text-white;
   @apply hover:bg-primary-800 hover:border-primary-800 hover:text-white;
 }
 
 @utility button-outline {
-  @apply bg-transparent border-primary-600 text-primary-600;
-  @apply hover:bg-primary-800 hover:border-primary-800;
+  @apply border-primary-600 text-primary-600 bg-transparent;
+  @apply hover:bg-primary-800 hover:border-primary-800 hover:text-white;
 }
 
 @utility button-gray {
-  @apply bg-gray-600 border-gray-600 text-white;
-  @apply hover:bg-gray-800 hover:border-gray-800;
+  @apply button;
+  @apply border-gray-600 bg-gray-600 text-white;
+  @apply hover:border-gray-800 hover:bg-gray-800;
 }
 
 @utility button-gray-outline {
-  @apply bg-transparent border-gray-600 text-gray-600;
-  @apply hover:bg-gray-800 hover:border-gray-800;
+  @apply button;
+  @apply border-gray-600 bg-transparent text-gray-600;
+  @apply hover:border-gray-800 hover:bg-gray-800;
 }
 
 @utility button-chevron-right {
-  @apply group-hover:translate-x-1 transition-transform;
+  @apply transition-transform group-hover:translate-x-1;
 }
 
 @utility center {
@@ -31,5 +33,5 @@
 @utility wrapper {
   @apply mx-auto;
   @apply px-5;
-  @apply w-full max-w-site;
+  @apply max-w-site w-full;
 }
