🚧 Image block and alignment

--- a/web/wp-content/themes/theme/styles/utilities.css
+++ b/web/wp-content/themes/theme/styles/utilities.css
@@ -1,3 +1,15 @@
+.alignleft {
+  @apply mx-auto sm:float-left sm:my-2 sm:mr-9;
+}
+
+.aligncenter {
+  @apply mx-auto;
+}
+
+.alignright {
+  @apply mx-auto sm:float-right sm:my-2 sm:ml-9;
+}
+
 @utility button {
   @apply inline-flex gap-1 rounded border-2 px-4 py-2;
   @apply cursor-pointer font-semibold no-underline;
@@ -6,6 +18,7 @@
 }
 
 @utility button-outline {
+  @apply button;
   @apply border-primary-600 text-primary-600 bg-transparent;
   @apply hover:bg-primary-800 hover:border-primary-800 hover:text-white;
 }
@@ -22,7 +35,7 @@
   @apply hover:border-gray-800 hover:bg-gray-800;
 }
 
-@utility button-chevron-right {
+.button-chevron-right {
   @apply transition-transform group-hover:translate-x-1;
 }
 
