--- a/web/wp-content/themes/theme/components/content.phtml
+++ b/web/wp-content/themes/theme/components/content.phtml
@@ -1,7 +1,7 @@
 <section>
   <div class="content wrapper max-w-content mt-10 mb-15 md:mt-20 md:mb-25">
-    <h1><?php the_title(); ?></h1>
+    <h1><?= $title ?? get_the_title(); ?></h1>
 
-    <?php the_content(); ?>
+    <?= $content ?? get_the_content(); ?>
   </div>
 </section>
