💄 Theme color and font

--- a/web/wp-content/themes/theme/styles/base.css
+++ b/web/wp-content/themes/theme/styles/base.css
@@ -1,6 +1,6 @@
 body {
   @apply bg-white text-gray-800;
-  @apply font-[Inter] leading-normal antialiased;
+  @apply font-sans leading-normal antialiased;
   @apply accent-primary-600;
 }
 
@@ -13,7 +13,7 @@ h3,
 h4,
 h5,
 h6 {
-  @apply leading-normal font-extrabold;
+  @apply font-[Crimson_Pro] leading-normal font-extrabold;
   @apply mb-2 text-lg/normal;
 
   strong {
@@ -38,7 +38,7 @@ h3 {
 }
 
 p {
-  @apply mb-6 text-base/normal text-gray-600;
+  @apply mb-6 text-gray-600;
 }
 
 ol,
