--- a/web/wp-content/themes/theme/components/button.phtml
+++ b/web/wp-content/themes/theme/components/button.phtml
@@ -14,8 +14,5 @@
 >
   <?= $iconBefore ?? null; ?>
   <?= $title; ?>
-  <?= $iconAfter ??
-    component('svg/chevron-right', [
-      'class' => 'button-chevron-right',
-    ]); ?>
+  <?= $iconAfter ?? null; ?>
 </a>
