--- a/web/wp-content/themes/theme/components/button.phtml
+++ b/web/wp-content/themes/theme/components/button.phtml
@@ -1,4 +1,4 @@
-<a class="button group <?= $class ?? ''; ?>"
+<a class="group <?= $class ?? ''; ?>"
     <?php
     if (!empty($url)) {
       echo 'href="' . $url . '" ';
