--- a/web/wp-content/themes/theme/components/logo.phtml
+++ b/web/wp-content/themes/theme/components/logo.phtml
@@ -1,7 +1,6 @@
 <a
   href="<?= home_url(); ?>"
-  class="hover:text-primary-600 flex items-center gap-3 text-xl font-extrabold text-gray-800 no-underline"
+  class="hover:text-primary-600 font-heading text-3xl font-black text-gray-800 no-underline"
 >
-  <div class="bg-primary-600 h-8 w-8 rounded-full"></div>
-  <?= get_bloginfo('sitename'); ?>
+  <?= get_bloginfo('sitename'); ?><span class="text-primary-600 ml-0.5">*</span>
 </a>
